; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/pci/extr_pci.c_zpci_report_error.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/pci/extr_pci.c_zpci_report_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }
%struct.zpci_report_error_header = type { i32 }
%struct.zpci_dev = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zpci_report_error(%struct.pci_dev* %0, %struct.zpci_report_error_header* %1) #0 {
  %3 = alloca %struct.pci_dev*, align 8
  %4 = alloca %struct.zpci_report_error_header*, align 8
  %5 = alloca %struct.zpci_dev*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %3, align 8
  store %struct.zpci_report_error_header* %1, %struct.zpci_report_error_header** %4, align 8
  %6 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %7 = call %struct.zpci_dev* @to_zpci(%struct.pci_dev* %6)
  store %struct.zpci_dev* %7, %struct.zpci_dev** %5, align 8
  %8 = load %struct.zpci_report_error_header*, %struct.zpci_report_error_header** %4, align 8
  %9 = load %struct.zpci_dev*, %struct.zpci_dev** %5, align 8
  %10 = getelementptr inbounds %struct.zpci_dev, %struct.zpci_dev* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.zpci_dev*, %struct.zpci_dev** %5, align 8
  %13 = getelementptr inbounds %struct.zpci_dev, %struct.zpci_dev* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @sclp_pci_report(%struct.zpci_report_error_header* %8, i32 %11, i32 %14)
  ret i32 %15
}

declare dso_local %struct.zpci_dev* @to_zpci(%struct.pci_dev*) #1

declare dso_local i32 @sclp_pci_report(%struct.zpci_report_error_header*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
